# CecilySolution

./: CMakeLists.txt  README.md
Activemq-cpp_3.7.1/ClearActiveMQ/: ClearActiveMQ.cpp  ClearMemoryPool.cpp  ClearMessageListerner.cpp  ClearTextMessageCreator.cpp  stdafx.cpp
Activemq-cpp_3.7.1/TestActiveMQ/: ClearActiveMQManager.cpp  ClearActiveMQManager.h  ClearCMSTemplate.h  ClearMessageListerner.cpp  ClearMessageListerner.h  TestActiveMQ.h  TestActiveMQDlg.cpp  TestActiveMQDlg.h  resource.h
Activemq-cpp_3.7.1/TestClearActiveMQ/: TestClearActiveMQ.h  TestClearActiveMQ.vcproj  TestClearActiveMQDlg.cpp  stdafx.cpp
Activemq-cpp_3.7.1/TestClearActiveMQ/res/: TestClearActiveMQ.rc2
Activemq-cpp_3.7.1/activemq-cpp/: KEYS  Makefile.am  autogen.sh  configure.ac  pom.xml
Activemq-cpp_3.7.1/activemq-cpp/assembly/: source.xml
Activemq-cpp_3.7.1/activemq-cpp/m4/: ac_amqcpp_utils.m4  ac_doxygen.m4  check_atomics.m4  check_pthreads.m4  check_visibility.m4  find_decaf.m4
Activemq-cpp_3.7.1/activemq-cpp/src/test-integration/: TestRegistry.cpp
Activemq-cpp_3.7.1/activemq-cpp/vs2008-build/: activemq-cpp-example.vcproj  activemq-cpp.sln  activemq-cpp.vcproj
Activemq-cpp_3.7.1/apr/: libapr.vcproj
Activemq-cpp_3.7.1/apr-iconv/: libapriconv.vcproj
Activemq-cpp_3.7.1/apr-iconv/ccs/: libapriconv_ccs_modules.vcproj
Activemq-cpp_3.7.1/apr-iconv/ces/: libapriconv_ces_modules.vcproj
Activemq-cpp_3.7.1/apr-util/: libaprutil.vcproj
Activemq-cpp_3.7.1/apr-util/crypto/: apr_crypto_nss.vcproj
Activemq-cpp_3.7.1/apr-util/dbd/: apr_dbd_mysql.vcproj  apr_dbd_oracle.vcproj  apr_dbd_sqlite3.vcproj
Activemq-cpp_3.7.1/apr-util/dbm/: apr_dbm_db.vcproj  apr_dbm_gdbm.vcproj
Activemq-cpp_3.7.1/apr-util/ldap/: apr_ldap.vcproj
Cecily/Activemq-cpp_3.7.1/: 清理临时文件.bat
Cecily/Activemq-cpp_3.7.1/ClearActiveMQ/: ClearActiveMQ.h  ClearActiveMQ.vcproj  ClearActiveMQHelp.h  ClearActiveMQManager.cpp  ClearActiveMQManager.h  ClearBytesMessageCreator.cpp  ClearBytesMessageCreator.h  ClearCMSTemplate.cpp  ClearCMSTemplate.h  ClearMemoryPool.h  ClearMessageListerner.h  ClearTextMessageCreator.h  SafetyObject.h
Cecily/Activemq-cpp_3.7.1/TestActiveMQ/: ClearActiveMQHelp.h  ClearCMSTemplate.cpp  SmartLocker.h  TestActiveMQ.cpp  TestActiveMQ.rc  TestActiveMQ.vcproj  stdafx.cpp
Cecily/Activemq-cpp_3.7.1/TestActiveMQ/res/: TestActiveMQ.rc2
Cecily/Activemq-cpp_3.7.1/TestClearActiveMQ/: TestClearActiveMQ.cpp  TestClearActiveMQ.rc  TestClearActiveMQDlg.h  resource.h
Cecily/Activemq-cpp_3.7.1/activemq-cpp/: NOTICE.txt  activemq-cpp.pc.in  build.sh  doxygen-include.am  doxygen.cfg
Cecily/Activemq-cpp_3.7.1/activemq-cpp/m4/: ac_amqcpp_common.m4  check_addrinfo.m4  decaf_tools.m4  find_openssl.m4
Cecily/Activemq-cpp_3.7.1/activemq-cpp/vs2008-build/: activemq-cmstemplate-receiver.vcproj  activemq-cmstemplate-sender.vcproj
Cecily/Activemq-cpp_3.7.1/apr/: apr.vcproj
Cecily/Activemq-cpp_3.7.1/apr-iconv/: apriconv.vcproj
Cecily/Activemq-cpp_3.7.1/apr-util/: aprutil.sln  aprutil.vcproj
Cecily/Activemq-cpp_3.7.1/apr-util/crypto/: apr_crypto_openssl.vcproj
Cecily/Activemq-cpp_3.7.1/apr-util/dbd/: apr_dbd_freetds.vcproj  apr_dbd_odbc.vcproj  apr_dbd_pgsql.vcproj  apr_dbd_sqlite2.vcproj
Cecily/LogSystem/: CMakeLists.txt  CecilyLogManager.cpp  CecilyLogSystem.cpp  CecilyLogSystem.h  CecilyReaper.cpp  CecilyReaper.h
Cecily/MQ/: AssistUtility.cpp  AssistUtility.h  CecilyAMQPMessage.cpp  CecilyActiveMQConnection.cpp  CecilyActiveMQConnection.h  CecilyActiveMQManager.cpp  CecilyActiveMQProxy.cpp  CecilyBytesMessageCreator.h  CecilyCMSTemplate.cpp  CecilyMemoryPool.cpp  CecilyMessageListerner.cpp  CecilyMessageListerner.h  CecilyRabbitMQProxy.cpp  Log.cpp  Log.h  stdafx.cpp
Cecily/SDK/libuv1.8.0/: CMakeLists.txt
Cecily/SDK/log4cplus/: CMakeLists.txt
Cecily/SDK/log4cplus/include/log4cplus/: mdc.h
Cecily/SDK/rabbitmq/: amqp.h  amqp_hostcheck.h  amqp_openssl_hostname_validation.h  amqp_private.h  amqp_socket.h
Cecily/SDK/rabbitmq/unix/: threads.h
Cecily/SDK/rabbitmq/win32/: threads.h
Cecily/TCP/: CMakeLists.txt  CecilyDataSerialize.cpp  CecilyDataSerialize.h  CecilyMemoryPool.h  CecilyTCPManager.h  CecilyUVHelp.h  CecilyUVTCPClient.cpp  stdafx.cpp
Cecily/tests/: CMakeLists.txt
Cecily/tests/TestCecilyMQ/: CMakeLists.txt  GridCtrl.h  InfoDisplayCtrl.h  StaticMemDC.h  TestCecilyMQ.h  TestCecilyMQ.rc  TestCecilyMQDlg.cpp  TestCecilyMQDlg.h  resource.h
Cecily/tests/TestCecilyTCPClient/: MyButton.cpp  TestCecilyTCPClient.aps  TestCecilyTCPClient.h  TestCecilyTCPClientDlg.cpp  TestCecilyTCPClientDlg.h  stdafx.cpp
Cecily/tests/TestCecilyTCPClient/res/: TestCecilyTCPClient.rc2
Cecily/tests/TestCecilyTCPServer/: InfoDisplayCtrl.cpp  MyButton.h  TestCecilyTCPServer.cpp  TestCecilyTCPServer.rc  TestCecilyTCPServerDlg.cpp  stdafx.cpp
LogServer/: CMakeLists.txt  LogServer.cpp
LogSystem/: CecilyLogHelp.h  CecilyLogManager.h  stdafx.cpp
MQ/: CMakeLists.txt  CecilyAMQPMessage.h  CecilyActiveMQHelp.h  CecilyActiveMQManager.h  CecilyActiveMQProxy.h  CecilyBaseProxy.h  CecilyBytesMessageCreator.cpp  CecilyCMSTemplate.h  CecilyMQ.cpp  CecilyMQ.h  CecilyMemoryPool.h  CecilyRabbitMQConnection.cpp  CecilyRabbitMQConnection.h  CecilyRabbitMQProxy.h  CecilyTextMessageCreator.cpp  CecilyTextMessageCreator.h  dllmain.cpp
SDK/: CMakeLists.txt
SDK/log4cplus/include/log4cplus/: ndc.h
SDK/log4cplus/src/: CMakeLists.txt
SDK/rabbitmq/: CMakeLists.txt  amqp_table.h  amqp_time.h
TCP/: CecilyMemoryPool.cpp  CecilyNetClient.cpp  CecilyNetClient.h  CecilyTCP.cpp  CecilyTCP.h  CecilyTCPManager.cpp  CecilyUVTCPClient.h  CecilyUVTCPServer.cpp  CecilyUVTCPServer.h  ReadMe.txt
tests/TestCecilyMQ/: GridCtrl.cpp  MemDC.h  ReadMe.txt  TestCecilyMQ.aps  TestCecilyMQ.cpp  TransparentStatic.cpp  TransparentStatic.h  stdafx.cpp
tests/TestCecilyMQ/res/: TestCecilyMQ.rc2
tests/TestCecilyTCPClient/: CMakeLists.txt  TestCecilyTCPClient.cpp  TestCecilyTCPClient.rc  resource.h
tests/TestCecilyTCPServer/: CMakeLists.txt  TestCecilyTCPServer.aps  TestCecilyTCPServer.h  TestCecilyTCPServerDlg.h  resource.h
(+1569 files in other folders)
